Upcoming Version 2.0.0-beta1

   - Signal window has a tool bar with zoom buttons, and a combo box
     to set the view mode.
   - Text area of Console windows grows with window in vertical direction.

Oct 21 2022: Version 2.0.0-alpha1

   - Rewrote ASM in Java using JavaFX graphics.
   - Each signal is shown in its own window.
   - Menus and dialogs for each command.
   - Fixed bode magnitude plot for very low values. Plot is cut at -100 dB.


Jul 1 2022: Version 1.1.3

   In 2021 I started porting ASM to Java + JavaFX to make a good interface.
   During this work I found a some bugs which are fixed in this version.

   This is the last C based version. Development will go on in the Java
   version.


   - Fixed high CPU load when waiting for input.
   - Fixed wrong values at Y-axis when the maximum value was smaller than
     the absolute minimal value.
   - Fixed Blackman, Hamming, Hanning, and Kaiser windows.
   - Added missing command for window Block.
   - Fixed shift function for signals with more than one record.
   - Fixed rotate function for negative rotation.
   - Fixed command description of correlation and convolution in the manual.
   - Updated doc/makefile for PDF generation from LaTeX.
   - Removed the PostScript documentation file.
   - The default sample rate is 10240 Hz.
   - The default screen resolution is 1024x768.

   The following keyboard shortcuts have been added (The Escape key and
   several function keys of my laptop are broken :) ).

   - ALT-X and CTRL-C bring you to the title screen.
   - SHIFT-<Left> and SHIFT-<Right> show the previous and next signal.
   - CTRL-<Left> and CTRL-<Right> to zoom out and in.

   Removed the DOS and Linux binaries.
   The Windows binary has been built with MinGW-w64 gcc 4.9.2 (i686-w64-mingw32)
   and Allegro 4.4.2. I was not able to build Allegro 4.4.2 myself anymore. I took
   the Allegro 4.4.2 binary package for MinGW 4.5.2 from https://www.allegro.cc/


Jul 28 2015: Version 1.1.2
