@@ -2,6 +2,8 @@ Upcoming Version 2.0.0-beta1
 
    - Signal window has a tool bar with zoom buttons, and a combo box
      to set the view mode.
+   - Signal window has scroll bars.
+   - Zoom in is limited to avoid rendering issues.
    - Text area of Console windows grows with window in vertical direction.
 
 Oct 21 2022: Version 2.0.0-alpha1
